[bug] fixed addBin button not showing when empty bins

--- a/css/bin.css
+++ b/css/bin.css
@@ -30,6 +30,15 @@
 	transition: right .5s, bottom .5s;
 }
 
+#add-bin.empty{
+	right: 0; bottom: 0;
+	display: none;
+}
+
+.edit #add-bin.empty {
+	display: flex;
+}
+
 .edit .bins li.selected {
 	box-shadow: 3px 5px 5px #444;
 }
